<resources>
    <string name="app_name">"PixelGym"</string>
    <string name="welcome_title">"Bienvenido. Login"</string>
    <string name="hint_username">"Usuario"</string>
    <string name="hint_password">"Contraseña"</string>
    <string name="hint_confirm_password">"Confirmar contraseña"</string>
    <string name="hint_birthdate">"Fecha de nacimiento"</string>
    <string name="action_login">"Iniciar Sesión"</string>
    <string name="action_login_google">"Iniciar Sesión en Google"</string>
    <string name="action_create_account">"Crear cuenta"</string>
    <string name="register_link_text">"¿No tienes cuenta? Crea una"</string>
    <string name="login_success">"Login Correcto. Bienvenido!"</string>
    <string name="login_error">"Credenciales incorrectas"</string>
    <string name="login_error_field">"Usuario o contraseña incorrectos"</string>
    <string name="snackbar_action_close">"CERRAR"</string>
    <string name="feature_not_implemented">"Funcionalidad no implementada aún"</string>
    <string name="nav_to_register">"Navegando al registro…"</string>
    <string name="error_email_mal_formado">"El formato del correo electrónico no es válido"</string>
    <string name="password_mismatch">"Las contraseñas no coinciden"</string>
    <string name="fill_date">"Selecciona una fecha"</string>
    <string name="error_email_ya_registrado">Error. Email ya registrado</string>
    <string name="error_registro_generico">Error al crear la cuenta</string>
    <string name="register_success_message">"Registro completado"</string>
    <string name="text_artista">Artista</string>
    <string name="text_ano">Año</string>
    <string name="text_favorito">Favorito</string>
    <string name="text_titulo_reserva">Título</string>
    <string name="tab_todos">Todos los reservas</string>
    <string name="tab_favoritos">Favoritos</string>
    <string name="text_caratula_del_reserva">Carátula del Reserva</string>
    <string name="fav">FAV</string>
    <string name="user_image">Imagen usuario</string>
    <string name="user">Usuario</string>
    <string name="navigation_drawer_open">Desplegar menú</string>
    <string name="navigation_drawer_close">Plegar Menú</string>
    <string name="lista">Lista</string>
    <string name="contacto">Contacto</string>
    <string name="preferencias">Preferencias</string>
    <string name="buscar">Buscar</string>
    <string name="ordenar">Ordenar</string>
    <string name="mas">Más</string>
    <string name="logout">Cerrar sesión</string>
    <string name="contacta">Contacta con nosotros</string>
    <string name="llamarTelefono">Llamar por teléfono</string>
    <string name="enviarMensaje">Enviar un mensaje</string>
    <string name="enviarCorreo">Enviar un correo</string>
    <string name="opciones">Opciones</string>
    <string name="crearNuevo">Nuevo</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="modoOscuro">Modo oscuro</string>
    <string name="sincronizar">Sincronizar datos</string>
    <string name="hintBuscar">Buscar reserva…</string>
    <string name="cierraSesion">Para salir cierra sesión</string>
    <string name="anonimo">Anónimo</string>
    <string name="error_unknown">Ha ocurrido un error inesperado</string>
    <string name="error_user_not_found">Usuario no encontrado</string>
    <string name="user_settings_title">Ajustes de Usuario</string>
    <string name="acerca_de">Acerca de…</string>
    <string name="salir_app">Cerrar APP</string>
    <string name="email_registro">Email para login</string>
    <string name="nick_registro">Nombre o Nick</string>
    <string name="contraseña_registro">Contraseña (mín. 6 caracteres)</string>
    <string name="contraseña_registro_2">Repetir contraseña</string>
    <string name="seleccion_plan">Selecciona tu plan:</string>
    <string name="plan_simple">Simple - 4 créditos - 15.99€</string>
    <string name="plan_basico">Básico - 8 créditos - 28.79€</string>
    <string name="plan_estandar">Estándar - 12 créditos - 40.79€</string>
    <string name="plan_vip">VIP - 16 créditos - 51.19€</string>
    <string name="plan_infinito">Infinito - 999 créditos - 59.99€</string>
    <string name="welcome_pixelgym">Bienvenido a PixelGym</string>
    <string name="acti_musculacion">Musculación</string>
    <string name="acti_pilates">Pilates</string>
    <string name="fuerza">Fuerza</string>
    <string name="cuerpo_mente">Cuerpo-Mente</string>
    <string name="baile">Baile</string>
    <string name="actividades">Actividades</string>
    <string name="mis_reservas">Mis reservas</string>
    <string name="nueva_reserva">NUEVA RESERVA</string>
    <string name="seleccion_fecha">Selecciona fecha</string>
    <string name="horario_disponible">HORARIOS DISPONIBLES</string>
    <string name="selecciona_hora">Selecciona hora</string>
    <string name="selecciona_hora_disponibilidad">Selecciona una hora para ver disponibilidad</string>
    <string name="confirmar_reserva">CONFIRMAR RESERVA</string>
    <string name="info_categoria">CATEGORIA</string>
    <string name="info_about">SOBRE LA ACTIVIDAD</string>
    <string name="cardio_about">Mejora tu resistencia cardiovascular</string>
    <string name="crossfit_about">WODs de alta intensidad funcional</string>
    <string name="fitboxing_about">Golpeo al saco y ejercicios funcionales</string>
    <string name="musculacion_about">Entrenamiento libre en sala de máquinas</string>
    <string name="pilates_about">Fortalecimiento del core y postura</string>
    <string name="spinning_about">Clase de ciclismo indoor de alta intensidad</string>
    <string name="yoga_about">Relajación y estiramientos profundos</string>
    <string name="zumba_about">Ejercicio divertido a ritmo de música latina</string>
    <string name="empty_reservas">No tienes ninguna sala reservada todavía.</string>
    <string name="equipo_instructores">EQUIPO DE INSTRUCTORES</string>
    <string name="reserva_ok">¡Reserva confirmada con éxito!</string>
    <string name="reserva_error">No hay plazas disponibles o error en la reserva</string>
    <string name="btn_anular">ANULAR</string>
    <string name="error_no_disponibilidad">No hay disponibilidad</string>
    <string name="prompt_selecciona_hora">Selecciona hora</string>
    <string name="error_reserva_duplicada">Ya tienes reserva a esa hora</string>
    <string name="quedan">Quedan</string>
    <string name="plazas_de">plazas de</string>
    <string name="creditos_disponibles">créditos disponibles</string>
    <string name="detalles_cuenta">DETALLES DE CUENTA</string>
    <string name="estado_suscripcion">Estado suscripción</string>
    <string name="suscripcion_activa">ACTIVA</string>
    <string name="suscripcion_inactiva">INACTIVA</string>
    <string name="fin_plan">Vencimiento</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="actividad">Actividad</string>
    <string name="historial_de_sesiones">HISTORIAL DE SESIONES</string>
    <string name="reservar">Reservar</string>
    <string name="imagen_de_la_actividad">Imagen de la actividad</string>
    <string name="imagen_actividad">Imagen de la actividad</string>
    <string name="cardio_express">Cardio Express</string>
    <string name="fitness">Fitness</string>
    <string name="estrella">Estrella</string>
    <string name="info">INFO</string>
    <string name="imagen_categoria">Imagen de la categoría</string>
    <string name="imagen_categoriab">Imagen de la categoría</string>
    <string name="volver_login">Volver al login</string>
    <string name="logo">Logo</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="cargando_horarios">Cargando horarios…</string>
    <string name="cargando_profesores">Cargando monitores…</string>
</resources>