<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/opciones">
        <menu>
            <item
                    android:id="@+id/drawer_list"
                    android:icon="@drawable/ic_list"
                    android:title="@string/lista"/>
            <item
                    android:id="@+id/drawer_contact"
                    android:icon="@drawable/ic_phone_msg"
                    android:title="@string/contacto"/>
            <item
                    android:id="@+id/drawer_preferences"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/preferencias"/>

            <item
                    android:id="@+id/drawer_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/acerca_de"/>

            <item
                    android:id="@+id/drawer_logOut"
                    android:icon="@drawable/ic_on_off"
                    android:title="@string/logout"/>

        </menu>
    </item>
</menu>
