<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="@string/buscar"
            app:iconTint="?attr/colorOnSurface"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
            android:id="@+id/action_sort"
            android:icon="@drawable/ic_swap_vert"
            android:title="@string/ordenar"
            app:iconTint="?attr/colorOnSurface"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_more"
            android:icon="@drawable/ic_more_vert"
            android:title="@string/mas"
            app:iconTint="?attr/colorOnSurface"
            app:showAsAction="ifRoom">


        <menu>
            <item
                    android:id="@+id/menu_about"
                    android:title="@string/acerca_de"/>
            <item
                    android:id="@+id/menu_logout"
                    android:title="@string/salir_app"/>
        </menu>

    </item>
</menu>

